sql note + fix til create

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -6,35 +6,35 @@
 </head>
 <body>
     <h1>LAV DIN EGEN POKEMON</h1>
-    <form action="create" method="post">
-        <label for="pokedex">Pokedex nummer: </label>
+    <form action="/create" method="post">
+        <label >Pokedex nummer: </label>
         <input name="pokedex_number" type="number">
         
-        <label for="name">Navn: </label>
+        <label >Navn: </label>
         <input name="name" type="text">
 
-        <label for="speed">Pokedex nummer: </label>
+        <label >Speed: </label>
         <input name="speed" type="number">
 
-        <label for="special_defence">Pokedex nummer: </label>
+        <label >Special_defence: </label>
         <input name="special_defence" type="number">
 
-        <label for="special_attack">Pokedex nummer: </label>
+        <label >Special_attack: </label>
         <input name="special_attack" type="number">
 
-        <label for="defence">Pokedex nummer: </label>
+        <label >Defence: </label>
         <input name="defence" type="number">
 
-        <label for="attack">Pokedex nummer: </label>
+        <label >Attack: </label>
         <input name="attack" type="number">
 
-        <label for="hp">Pokedex nummer: </label>
+        <label >HP: </label>
         <input name="hp" type="number">
 
-        <label for="primary_type">Navn: </label>
+        <label >Primary_Type: </label>
         <input name="primary_type" type="text">
 
-        <label for="secondary_type">Navn: </label>
+        <label >Secondary_Type: </label>
         <input name="secondary_type" type="text">
 
 
