sql note + fix til create

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,19 @@
 </head>
 <body>
 <h1>Pokedex</h1>
+
+<div>
+    <h3>Tilføj Pokemon</h3>
+    <a href="/create">
+        <button>Create</button>
+    </a>
+</div>
+
 <table>
     <thead>
     <tr>
         <th>
-        Pokedex
+            Pokedex
         </th>
         <th>
             Navn
