--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lav din Pokemon!</title>
+    <title>Opdater Pokemon</title>
 </head>
 <body>
-<h1>LAV DIN EGEN POKEMON</h1>
+<h1>Opdater pokemon</h1>
 <table>
-    <form action="/create" method="post">
+    <form action="/update" method="post">
 
         <tr>
             <td>
